--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "MONT-BLANC.sln"
+    "dotnet.defaultSolution": "pastry-island.sln"
 }
